#1 Add plugin configuration inside eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,9 @@
             "error",
             "always"
         ]
-    }
+    },
+    "plugins": [
+        "json",
+        "markdown"
+    ]
 }
